# Counter-Strike-coach-AI

./: .cs2_req_no_torch.txt  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AIstate.md  AUDIT_PROTOCOL.md  AUDIT_REPORT.md  Build_Health_Report.json  CHANGELOG.md  CLAUDE.md  CONSOLE_ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTING_IT.md  CONTRIBUTING_PT.md  Compiler_Readiness_Report.json  KNOWLEDGE_TRANSFER_TO_CS2_COACH.md  LICENSE  MANIFEST.in  PYCHARM_CONFIGURATION_GUIDE _reference.md  PYCHARM_CONFIGURATION_GUIDE.md  README.md  README_IT.md  README_PT.md  REFERENCE.md  SECURITY.md  TASKS.md  VALIDATION_REPORT.md  _rocm_smoke.sh  alembic.ini  batch_ingest.py  bindep.txt  console.py  docker-compose.yml  export_env.bat  goliath.py  hflayers.py  ingest.sh  integrity_manifest.json  jepa.md  (+21 more)
.github/: ABOUT_CICD.md  ABOUT_CICD_IT.md  ABOUT_CICD_PT.md  CICD_GUIDE.md  CODEOWNERS  OVERVIEW.md  OVERVIEW_IT.md  OVERVIEW_PT.md  README.md  README_IT.md  README_PT.md  dependabot.yml  pull_request_template.md
Programma_CS2_RENAN/: README.md  README_IT.md  README_PT.md  Train_ML_Cycle.py  __init__.py  fetch_hltv_stats.py  hltv_sync_service.py  main.py  pytest.ini  requirements.txt  run_build.py  run_ingestion.py  run_worker.py  settings.json
SECURITY/: BOUNDARY_FILES.txt  CONFIG_REFERENCE.md  CONTROL_CATALOG.md  CVE_LOG.md  INCIDENT_RESPONSE.md  README.md  README_IT.md  README_PT.md  SLSA.md  THREAT_MODEL.md  WIPE_RUNBOOK.md  waivers.yaml
alembic/: README.md  README_IT.md  README_PT.md  env.py
backend/: README.md  README_IT.md  README_PT.md
design/: README.md  README_IT.md
docs/: AI-cs2-coach-part1.md  AI-cs2-coach-part2.md  AI-cs2-coach-part3.md  AI_ARCHITECTURE_ANALYSIS_PT.md  AUDIT_01_NEURAL_NETWORKS_CORE.md  AUDIT_02_RAP_COACH_TRAINING.md  AUDIT_03_PROCESSING_PIPELINE.md  AUDIT_04_ANALYSIS_GAME_THEORY.md  AUDIT_05_COACHING_SERVICES.md  AUDIT_06_STORAGE_DATABASE.md  AUDIT_07_DATA_INGESTION.md  AUDIT_08_CORE_ENGINE.md  AUDIT_09_DESKTOP_APP_UI.md  AUDIT_10_OBSERVABILITY_TOOLS.md  AUDIT_11_TESTS.md  AUDIT_12_CONFIG_INFRASTRUCTURE.md  AUDIT_PROGRESS.md  Book-Coach-1.md  Book-Coach-1A.md  Book-Coach-2.md  Book-Coach-3.md  COACH_QUALITY_ROADMAP.md  DEEP_AUDIT_FINDINGS.md  DEFERRALS.md  DIAGNOSIS_2026-05.md  ENGINEERING_HANDOFF.md  ERROR_CODES.md  FRESH_AUDIT_2026-03-09.md  FRONTEND_ANALYSIS.md  INDUSTRY_STANDARDS_AUDIT.md  MASTER_REMEDIATION_PLAN.md  OPEN_PROBLEMS.md  PHASE11_REVIEW_PLAN.md  PIPELINE_AUDIT_REPORT.md  QUICKSTART.md  README.md  README_IT.md  README_PT.md  RE_INGESTION_GUIDE.md  SESSION_HANDOFF.md  (+25 more)
evals/: README.md  README_IT.md  README_PT.md
logs/: README.md  README_IT.md  README_PT.md
packaging/: BUILD_CHECKLIST.md  README.md  README_IT.md  README_PT.md  cs2_analyzer_win.spec  windows_installer.iss
reports/: FINAL_SYNTHESIS.md  README.md  README_IT.md  README_PT.md  phase01_foundation_storage.md  phase02_processing_pipeline.md  phase03_neural_networks.md  phase04_analysis_coaching.md  phase05_services_knowledge.md  phase06_core_datasources_ingestion.md  phase07_ui_entrypoints.md  phase08_tools_validation.md  phase09_test_suite.md
scripts/: README.md  README_IT.md  README_PT.md  Setup_Macena_CS2.ps1  build_exe.bat  build_production.bat  reaggregate.sh
tests/: README.md  README_IT.md  README_PT.md  conftest.py  setup_golden_data.py  test_d3_rederive.py  test_eval_harness.py  test_lock_files.py  test_rescrape_placeholder_pros.py  test_sync_pro_players.py  verify_chronovisor_logic.py  verify_chronovisor_real.py  verify_csv_ingestion.py  verify_map_integration.py  verify_reporting.py  verify_superposition.py
tools/: Feature_Audit.py  README.md  README_IT.md  README_PT.md  Sanitize_Project.py  audit_binaries.py  audit_scanner.py  (+47 more)
(+962 files in other folders)
