# pyproject.toml — Macena CS2 Analyzer
# Unified tool configuration. Source of truth for tool behavior.
# Pre-commit hooks (.pre-commit-config.yaml) must align with these values.

# P5-04: Standard build configuration for proper Python packaging
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "macena-cs2-analyzer"
version = "1.0.0"
description = "AI-powered Counter-Strike 2 coaching and analysis platform"
requires-python = ">=3.10"
license = {text = "Proprietary"}

[tool.setuptools.packages.find]
include = ["Programma_CS2_RENAN*"]

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '''
/(
    external_analysis
  | dist
  | \.venv
  | venv.*
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["external_analysis/*", "dist/*", ".venv/*", "venv*/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
exclude = [
    "external_analysis/",
    "dist/",
    "\\.venv/",
    "tests/",
]

[tool.coverage.run]
source = ["Programma_CS2_RENAN"]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/external_analysis/*",
]

[tool.coverage.report]
# P6-01: Incremental coverage roadmap
# Current: 33% → Target: 35 → 40 → 50 → 60 → 70
# Raise after each test-writing phase (fix 28 stale tests first).
fail_under = 33
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
