# pyproject.toml — Macena CS2 Analyzer
# Unified tool configuration. Source of truth for tool behavior.
# Pre-commit hooks (.pre-commit-config.yaml) must align with these values.

# P5-04: Standard build configuration for proper Python packaging
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "macena-cs2-analyzer"
version = "1.0.0"
description = "AI-powered Counter-Strike 2 coaching and analysis platform"
requires-python = ">=3.10"
license = {text = "Proprietary"}

[tool.setuptools.packages.find]
include = ["Programma_CS2_RENAN*"]

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '''
/(
    external_analysis
  | dist
  | \.venv
  | venv.*
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["external_analysis/*", "dist/*", ".venv/*", "venv*/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
exclude = [
    "external_analysis/",
    "dist/",
    "\\.venv/",
    "tests/",
]

[tool.coverage.run]
source = ["Programma_CS2_RENAN"]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/external_analysis/*",
    # Dev/CLI tools — not production code, don't inflate coverage denominator
    "*/tools/*",
    # Legacy Kivy UI — migrated to Qt, not shipped in V1
    "*/apps/desktop_app/*",
    # Entry-point scripts (thin wrappers, tested via integration)
    "*/run_ingestion.py",
    "*/run_worker.py",
    "*/run_build.py",
    "*/main.py",
]

[tool.coverage.report]
# P6-01: Incremental coverage roadmap
# Exclusions updated: dev tools, legacy Kivy UI, entry-point scripts
# omitted from denominator for honest production coverage measurement.
fail_under = 40
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
